<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    
    <TextView 
        android:id="@+id/tvOldPassword"
        android:text="@string/old_password"/>
    <EditText
        android:id="@+id/etOldPassword"
        android:inputType="textPassword"/>
    
    <TextView 
        android:id="@+id/tvNewPassword"
        android:text="@string/new_password"
        />    
    <EditText
        android:id="@+id/etNewPassword"
        android:inputType="textPassword"/>
    
    <TextView 
        android:id="@+id/tvNewPasswordConfirm"
        android:text="@string/new_password_confirm"/>
    <EditText
        android:id="@+id/etNewPasswordConfirm"
        android:inputType="textPassword"/>
</TableLayout>